@@ -1,5 +1,6 @@
 ** v1.27, xx.xx.2016**
 * Install: enable the BenikUI Token Dashboard again.
+* Battle.net Alert fix a rar Error. (Credits: cmc3215)
 
 \\ \\
 ** v1.26, 23.03.2016**
